[gd_scene load_steps=5 format=3 uid="uid://j1hv0mdwq75c"]

[ext_resource type="Script" path="res://src/ui/hud/health_and_money.gd" id="1_kupsd"]
[ext_resource type="Texture2D" uid="uid://c45p5tvcf6p2d" path="res://assets/textures/money/Money.png" id="2_d3g4o"]
[ext_resource type="FontFile" uid="uid://jd478um6wqpv" path="res://assets/fonts/Gameplay.ttf" id="3_auuyl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8jtwi"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0, 0, 0, 0.588235)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="HealthMoneyPanel" type="PanelContainer"]
custom_minimum_size = Vector2(200, 0)
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_8jtwi")

[node name="HealthAndMoney" type="VBoxContainer" parent="."]
layout_mode = 2
script = ExtResource("1_kupsd")

[node name="HealthBar" type="ProgressBar" parent="HealthAndMoney"]
self_modulate = Color(0.298039, 0.854902, 0.25098, 1)
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
value = 100.0
show_percentage = false

[node name="HealthLabel" type="Label" parent="HealthAndMoney/HealthBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("3_auuyl")
theme_override_font_sizes/font_size = 15
text = "10/10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MoneyContainer" type="HBoxContainer" parent="HealthAndMoney"]
layout_mode = 2

[node name="Icon" type="TextureRect" parent="HealthAndMoney/MoneyContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
texture = ExtResource("2_d3g4o")
expand_mode = 5
stretch_mode = 4

[node name="MoneyLabel" type="Label" parent="HealthAndMoney/MoneyContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_auuyl")
theme_override_font_sizes/font_size = 15
text = "MONEY"
